--- a/src/components/FoodItem/FoodItem.css
+++ b/src/components/FoodItem/FoodItem.css
@@ -36,3 +36,30 @@
   font-weight: 500;
   margin: 10px 0;
 }
+.food-item-img-container {
+  position: relative;
+}
+.food-item-img-container .add {
+  width: 35px;
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  cursor: pointer;
+  border-radius: 50%;
+  animation: fadeIn 0.5s ease-in-out;
+}
+.food-item-counter {
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 6px;
+  border-radius: 50px;
+  background-color: white;
+  animation: fadeIn 0.5s ease-in-out;
+}
+.food-item-counter img {
+  width: 30px;
+}
