--- a/src/components/Navbar/Header/Header.css
+++ b/src/components/Navbar/Header/Header.css
@@ -22,7 +22,7 @@
 .header-contents h2 {
   font-weight: 500;
   color: white;
-  font-size: max(4.5vw, 22px);
+  font-size: max(4.5vw, 15px);
 }
 .header-contents p {
   color: white;
@@ -36,4 +36,21 @@
   background-color: white;
   font-size: max(1vw, 13px);
   border-radius: 50px;
+}
+
+@media (max-width: 1050px) {
+  .header-contents {
+    max-width: 45%;
+  }
+}
+@media (max-width: 750px) {
+  .header-contents p {
+    display: none;
+  }
+  .header-contents {
+    max-width: 55%;
+  }
+  .header-contents button {
+    padding: 2vw 4vw;
+  }
 }
